# banditdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
benchmark/movielens/: advanced_sweep.py  convert.py  cross_feature_sweep.py  evaluate.py  evaluate_improved.py  history_sweep.py  nonlinear_sweep.py  offline_sweep.py
benchmark/throughput/: bench.py
benchmark/yahoo_r6/: convert.py
docs/: CNAME  HA_RUNBOOK.md  docs.html  gemini-suggestions.md  index.html  neural_linear_design.md  neural_linear_transition.md  openapi.yaml  rlhf.html  ui.html
examples/: 01_dynamic_pricing_sell_through.md  03_ecommerce_upsell_optimization.md  04_adaptive_clinical_trials.md  05_sleep_improvement.md  06_law_firm_client_intake.md  07_prompt_optimisation_llm_evals.md  08_multi_agent_games.md  11_neural_linucb_high_dim_scale.py  12_neural_linucb_banking_financial_health.py  16_neural_thompson_sampling_finmedia_churn.py  17_neural_ts_vs_linucb_churn_256dim.py
examples/01_dynamic_pricing_sell_through/: 01_dynamic_pricing_sell_through.md
examples/02_convergence_simulation/: 02_convergence_simulation.py
examples/03_ecommerce_upsell_optimization/: 03_ecommerce_upsell_optimization.md
examples/04_adaptive_clinical_trials/: 04_adaptive_clinical_trials.md
examples/05_sleep_improvement/: 05_sleep_improvement.md
examples/06_law_firm_client_intake/: 06_law_firm_client_intake.md
examples/07_prompt_optimisation_llm_evals/: 07_prompt_optimisation_llm_evals.md
examples/09_neural_linucb_nonlinear_reward/: 09_neural_linucb_nonlinear_reward.py
examples/09b_xor_explained/: 09b_xor_explained.py
examples/10_neural_linucb_prompt_optimizer/: 10_neural_linucb_prompt_optimizer.py
helm/banditdb/: Chart.yaml  (+1 more)
scripts/: causal_analysis.py  gcp_bigquery_setup.py  install-claude.sh  install.sh  nginx_sandbox.conf  reset_sandbox.sh  seed_sandbox.py  setup_sandbox.sh
src/: engine.rs  lib.rs  main.rs  math.rs  neural.rs  state.rs
tests/: chaos_tests.rs  checkpoint_tests.rs  engine_tests.rs  math_tests.rs  thundering_herd_tests.rs  tournament_tests.rs
(+17 files in other folders)
