[package]
name = "banditdb"
version = "0.1.0"
edition = "2021"
description = "An ultra-fast Contextual Bandit Database"

[dependencies]
ndarray = "0.15"
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] }
uuid = { version = "1.8", features = ["v4"] }
axum = "0.7"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.41", features = ["json", "parquet", "lazy"] }
