[package]
name = "banditdb"
version = "1.0.0"
edition = "2021"
description = "An ultra-fast Contextual Bandit Database"
license = "Apache-2.0"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
parking_lot = "0.12"
moka = { version = "0.12", features = ["sync"] }
uuid = { version = "1.8", features = ["v4"] }
axum = "0.7"
tokio = { version = "1.43", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http         = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
polars = { version = "0.41", features = ["json", "parquet", "lazy"] }
rand = "0.8"
rand_distr = "0.4"
subtle = "2"
governor = "0.6"
rmp-serde = "1"
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }

[features]
neural = ["dep:candle-core", "dep:candle-nn"]
cuda   = ["neural", "candle-core/cuda"]
metal  = ["neural", "candle-core/metal"]
